# VBI_Asignment

./: Cargo.toml  as5.rs  dns.rs  lib.rs  raw.json
node/src/: example_rpc.rs  lib.rs  rpc.rs
pallets/kitties/: Cargo.toml
pallets/kitties/rpc/: Cargo.toml
pallets/kitties/rpc/runtime-api/: Cargo.toml
pallets/kitties/rpc/runtime-api/src/: lib.rs
pallets/kitties/rpc/src/: lib.rs
pallets/kitties/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs
pallets/loosely-coupling/: Cargo.toml
pallets/loosely-coupling/src/: lib.rs
pallets/loosely-kitties/: Cargo.toml
pallets/loosely-kitties/src/: lib.rs
pallets/my-timestamp/: Cargo.toml
pallets/my-timestamp/src/: lib.rs  weights.rs
pallets/template/rpc/: Cargo.toml
pallets/template/rpc/runtime-api/: Cargo.toml
pallets/template/rpc/runtime-api/src/: lib.rs
pallets/template/rpc/src/: lib.rs
pallets/template/src/: lib.rs
pallets/tightly-coupling/: Cargo.toml
pallets/tightly-coupling/src/: lib.rs
pallets/tightly-kitties/: Cargo.toml
pallets/tightly-kitties/src/: lib.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
scripts/: total_kitties.sh
